--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <div class="kpi">
             <div class="label">Cost per Avg Ticket (at EFR)</div>
             <div class="value" id="costPerTicket">—</div>
-            <div class="sub">This helps neutralize “sales drop” fear.</div>
+            <div class="sub">neutralize “sales drop” fear.</div>
           </div>
         </div>
 
@@ -236,7 +236,7 @@
             <p>Menu price is transparent, and when the guest pays cash the POS shows a discount back to the cash price.</p>
             <div class="bigCallout" style="margin-top:10px;background:var(--good)">
               <div>
-                <div class="headline">Script you can use</div>
+                <div class="headline">keep in mind</div>
                 <div class="note"><b>“If sales drop, it won’t be because of 40 cents — it’ll be because it feels like a fee. That’s why we do it the compliant way: the menu price is transparent, and cash gets rewarded.”</b></div>
               </div>
             </div>
@@ -546,3 +546,4 @@
   </script>
 </body>
 </html>
+
