--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <p>Menu price is transparent, and when the guest pays cash the POS shows a discount back to the cash price.</p>
             <div class="bigCallout" style="margin-top:10px;background:var(--good)">
               <div>
-                <div class="headline">keep in mind</div>
+                <div class="headline">Keep this in mind</div>
                 <div class="note"><b>“If sales drop, it won’t be because of 40 cents — it’ll be because it feels like a fee. That’s why we do it the compliant way: the menu price is transparent, and cash gets rewarded.”</b></div>
               </div>
             </div>
@@ -546,4 +546,5 @@
   </script>
 </body>
 </html>
+
 
